# cppmega_mlx

./: .gitignore  AGENTS.md  MIGRATION_PLAN.md  README.md  fix_md.py  pyproject.toml  setup.py  test_md.py  test_wide_tables.py  tmp_fp8_metal_probe.py
bench/baselines/: adam8bit_state_size_m4.json  adam8bit_state_size_m4_dynamic.json  c08_4_muon_ns_carrier_m4.json  grad_buffer_audit.json  lion8bit_state_size_m4.json  local_gb10_quarter_throughput_60gb_m4.json  local_gb10_quarter_throughput_60gb_m4.raw.json  m04_adam8bit_full_parquet_smoke.json  m04_train_step.json  m06_memory.json  memory_audit_local_gb10_quarter.json  memory_probe_local_gb10_quarter_bf16.json  memory_probe_local_gb10_quarter_t1024.json  memory_probe_post_fixes.json  quantized_muon_state_size_m4.json  throughput_60gb_fused8bit_m4.json  throughput_88gb_fused8bit_m4.json  throughput_88gb_post_docker_m4.json  uy5_regional_compile_m4.json  zero1_loopback_2proc_m4.json  zero1_simulated_2proc_m4.json
bench/parity/: m03_random_init.json  m05_fastmtp.json
bench/tilelang_ports/: fp8_msl_kernels.json  fp8_path_c.json  fp8_path_c_vs_path_b.json  lane7_fp8_vecmat_4096.json  m2rnn_path_b.json  m2rnn_path_c_vs_path_b_20step.json  mamba3.json  mamba3_helpers.json  mamba3_path_c.json  sparse_mla.json  sparse_mla_blockscaled.json  sparse_mla_fp8.json  topk_selector.json
cppmega_mlx/: __init__.py  _mlx_lm_imports.py
cppmega_mlx/config/: __init__.py  model.py
cppmega_mlx/data/: __init__.py  batch.py  dataloader_bridge.py  fim.py  megatron_indexed.py  packing.py  parquet_dataset.py  token_dataset.py  tokenizer_contract.py
cppmega_mlx/inference/: __init__.py  engine.py  generation.py  infilling.py  quantization.py  sampling.py  serving.py  speculative_decode.py
cppmega_mlx/kernels/: __init__.py  metal_ops.py
cppmega_mlx/models/: __init__.py  hybrid_lm.py  tiny_lm.py
cppmega_mlx/nn/: __init__.py  _cuda_kernel_bridge.py  _cute_bridge.py  _mxfp8_bridge.py  _triton_bridge.py  _triton_to_cute_dsl.py  attention.py  concept.py  engram.py  m2rnn.py  mamba3.py  mhc.py  moe.py  ngram_hash.py  sparse_mla.py  structure_embedding.py
cppmega_mlx/nn/_tilelang/native_bridge/: CMakeLists.txt  tilelang_mlx_tvm_ffi_bridge.cpp  tilelang_mlx_tvm_ffi_bridge.h
cppmega_mlx/recipes/: __init__.py  model_factory.py  nam56r.py  pattern.py
cppmega_mlx/runtime/: __init__.py  env.py  kernel_policy.py  memory.py  memory_audit.py  seed.py
cppmega_mlx/tokenizer/: __init__.py  _nanochat_decoder.py  cpp_tokenizer.py
cppmega_mlx/training/: __init__.py  _fused_adam8bit_kernel.py  _fused_dynamic8bit_kernel.py  _fused_lion8bit_kernel.py  _quantize_8bit.py  baselines.py  checkpoint.py  compiled.py  cut_cross_entropy.py  distributed_optimizer.py  eval.py  loop.py  loss.py  mlx_lm_adapter.py  mtp.py  optimizers.py  optimizers_quantized.py  parity.py  profile.py  stp_loss.py
cppmega_mlx/training/native_optim/: CMakeLists.txt  __init__.py  bindings.cpp  fused_8bit.cpp  fused_8bit.h  fused_8bit.metal
cppmega_v4/: __init__.py  run_template.py
cppmega_v4/_tilelang/: __init__.py  _dispatch.py  _kernel_cache.py  _path_d_deps.py  benchmark_matrix.py  benchmark_receipt.py  fused_fp8_gemm.py  kda_path_b.py  kda_path_b_bwd.py  kda_path_c.py  (+9 more)
docs/: bench_local_gb10_quarter_production.md  checkpointing.md  data_pipeline.md  distributed_zero1_smoke_procedure.md  gb10_matched_runner.md  kernel_coverage_matrix.md  megatron_indexed_ingress.md  metal_kernel_policy.md  mlx_abi_troubleshooting.md  mlx_buy_vs_build.md  mlx_port_master_plan.md  multimac_training.md  parity_anchors.md  parquet_samples.md  perf_baseline.md  perf_mamba_m2rnn.md  porting_plan.md  production_kernel_routing.md  profile_kernel_gate.md  system_requirements.md
reports/: INTEGRATION_PLAN_CPPMEGA_CUDA.md  INTEGRATION_PLAN_CPPMEGA_MLX.md  RENT_KERNELS_FINDINGS.html  RENT_KERNELS_FINDINGS.md  cppmega_1b_path_matrix.html  cppmega_1b_path_matrix.json  cppmega_1b_path_matrix.md  index.html  memory_profile_2026-05-17.html  memory_profile_2026-05-17.json
scripts/: archive_bench_baseline.py  audit_grad_buffer_reuse.py  audit_memory.py  bench_1b_training_matrix.py  bench_adam8bit.py  bench_cce.py  bench_fp8_msl_kernels.py  bench_lion8bit.py  bench_local_gb10_quarter_throughput.py  bench_m2rnn_path_b.py  bench_matrix.py  bench_muon_ns_carrier.py  bench_quantized_muon.py  bench_tilelang_fp8_path_c.py  bench_tilelang_m2rnn_path_c.py  bench_tilelang_mamba3.py  bench_tilelang_mamba3_helpers.py  bench_tilelang_mamba3_path_c.py  bench_tilelang_sparse_mla.py  bench_tilelang_sparse_mla_fp8.py  bench_tilelang_topk.py  bench_tiny.py  bench_zero1_loopback.py  check_environment.py  check_mlx_abi.sh  compare_bench_rows.py  data_smoke.py  fix_mlx_abi.sh  m03_forward_parity_manifest.py  m04_train_step.py  m05_mtp_parity_manifest.py  probe_m04_full_route_grad.py  profile_capture.py  render_1b_training_matrix_html.py  train_hybrid_tiny.py  train_tiny_npz.py  update_bench_summary.py  v4_1b_parquet_smoke.py
tests/: conftest.py  test_archive_bench_baseline_script.py  test_attention.py  test_bench_1b_training_matrix.py  test_bench_baselines.py  test_bench_matrix.py  test_bench_script.py  test_check_environment_script.py  test_checkpoint.py  test_checkpoint_subprocess_resume.py  test_compare_bench_rows.py  test_compiled_train.py  test_config.py  test_cppmega_parity_anchors.py  test_cuda_kernel_bridge.py  test_cut_cross_entropy.py  test_cute_bridge.py  test_cute_to_tilelang_bridge.py  test_data_pipeline_doc.py  test_data_smoke_script.py  test_dataloader_bridge.py  test_distributed_zero1.py  test_distributed_zero1_loopback.py  test_engram.py  test_engram_doc_ids.py  test_env_runtime.py  test_eval.py  test_external_research_contract.py  test_fim_transform.py  test_fp8_msl_kernels.py  test_fusion_patterns_extended.py  test_grad_buffer_no_aliasing.py  test_grad_dtype_contract.py  test_hybrid_lm.py  test_hybrid_lm_extensions.py  test_hybrid_lm_gradients.py  test_inference_engine.py  test_inference_generation.py  test_inference_infilling.py  test_inference_quantization.py  (+76 more)
tools/: lint_mlx.py  memory_dtype_audit.py.upstream
(+427 files in other folders)
