[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cppmega-mlx"
version = "0.1.0"
description = "MLX-native local training port of cppmega model semantics"
requires-python = ">=3.11"
dependencies = [
    "mlx>=0.31",
    "mlx-lm>=0.31",
    "numpy>=1.26",
    "safetensors>=0.7",
]

[project.optional-dependencies]
parquet = [
    "pyarrow>=21",
]

[tool.setuptools.packages.find]
include = ["cppmega_mlx*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
